Solve issue in version getFirst does work well in other computer